# synaptiq-hppo

./: .gitmodules  Makefile  README.md  Tiltfile
archive/kustomizations/bases/fdb-cluster/: cluster.yaml
axiom/: README.md
axiom/src/: background.js  contentScript.js  manifest.json  package-lock.json  popup.html  popup.js
chatbae/: Dockerfile  Makefile  README.md  pyproject.toml
chatbae/chatbae/: bot.py  digest.py  llm.py  main.py  response_generator.py
chatbae/tests/: conftest.py  test_digest.py  test_llm.py  test_output_generator.py  test_summarize.py
chatbot/: bot.py  pyproject.toml
chatbot/chatbot/: bot.py  main.py  response_generator.py
chatbot/notebooks/: driver.py  llama2_chatbot.py
common/: Tiltfile
infrastructure/: Tiltfile
infrastructure/kustomizations/bases/fdb-cluster/: kustomization.yaml  namespace.yaml
infrastructure/kustomizations/bases/fdb-operator/: Makefile  deployment.yaml  kustomization.yaml
llama2/: llama2-7b-chat-hf.py  whip.py
ui/: Dockerfile  Tiltfile  kubernetes.yaml  package.json
ui/melvil-ui/: package-lock.json  package.json
wordbae/: Makefile  pyproject.toml
