[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["rdmontgomery <rick.montgomery@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.31.0"
slackapi = "^0.0.3"
slack-bolt = "^1.18.0"
aiohttp = "^3.8.5"
python-dotenv-vault = "^0.6.1"
lru-cache = "^0.2.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
databricks-sdk = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
mypy = "^1.4.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
